Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -185,8 +185,6 @@ nav {
             }
         }
         ul {
-            display: table;
-            float: none;
             text-align: left;
             padding: 0;
             @media @tablet {
